# Override http_archive for local testing
local_repository(
    name = "rules_oak",
    path = "../..",
)

#---SNIP--- Below here is re-used in the workspace snippet published on releases

######################
# rules_oak setup #
######################
# Fetches the rules_oak dependencies.
# If you want to have a different version of some dependency,
# you should fetch it *before* calling this.
# Alternatively, you can skip calling this function, so long as you've
# already fetched all the dependencies.
load("@rules_oak//oak:repositories.bzl", "oak_register_toolchains", "rules_oak_dependencies")

rules_oak_dependencies()

oak_register_toolchains(
  name = "oak",
  oak_version = "0.3",
)
